[gd_scene load_steps=7 format=2]

[ext_resource path="res://Score.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/fuenteChida.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/Carter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/styles/botones.tres" type="StyleBox" id=4]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Score" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Menu" type="CenterContainer" parent="."]
visible = false
margin_right = 1012.0
margin_bottom = 600.0

[node name="Vbox" type="VBoxContainer" parent="Menu"]
margin_left = 463.0
margin_top = 238.0
margin_right = 548.0
margin_bottom = 362.0
custom_constants/separation = 14

[node name="Continue" type="Button" parent="Menu/Vbox"]
margin_right = 85.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( -1303, 171 )
theme = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.501961, 0.662745, 1 )
custom_colors/font_color_focus = Color( 0.0823529, 0.678431, 0.803922, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0901961, 0.603922, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 0.105882, 0.619608, 0.678431, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "Continue..  "

[node name="GoBack" type="Button" parent="Menu/Vbox"]
margin_top = 46.0
margin_right = 85.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( -1303, 171 )
theme = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.501961, 0.662745, 1 )
custom_colors/font_color_focus = Color( 0.0823529, 0.678431, 0.803922, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0901961, 0.603922, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 0.105882, 0.619608, 0.678431, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "Regresar"

[node name="Exit" type="Button" parent="Menu/Vbox"]
margin_top = 92.0
margin_right = 85.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( -1303, 171 )
theme = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.501961, 0.662745, 1 )
custom_colors/font_color_focus = Color( 0.0823529, 0.678431, 0.803922, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0901961, 0.603922, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 0.105882, 0.619608, 0.678431, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "Salir"

[node name="HUD" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 40.0

[node name="Nivel" type="Label" parent="HUD"]
margin_left = 50.0
margin_right = 106.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel:"

[node name="NivelA" type="Label" parent="HUD/Nivel"]
margin_left = 104.0
margin_top = 1.0
margin_right = 144.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Score" type="Label" parent="HUD"]
margin_left = 241.0
margin_top = -1.0
margin_right = 337.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "Score:"

[node name="ScoreI" type="Label" parent="HUD/Score"]
margin_left = 110.0
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="Time" type="Label" parent="HUD"]
margin_left = 627.0
margin_top = 2.0
margin_right = 784.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 2 )
text = "Time left: "

[node name="Lives" type="Label" parent="HUD"]
margin_left = 433.0
margin_top = 1.0
margin_right = 529.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "Vidas:"

[node name="LivesA" type="Label" parent="HUD/Lives"]
margin_left = 107.0
margin_right = 147.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "10"

[node name="Pause" type="Button" parent="HUD"]
margin_left = 909.0
margin_top = 9.0
margin_right = 1002.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( -1303, 171 )
theme = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.0666667, 0.501961, 0.662745, 1 )
custom_colors/font_color_focus = Color( 0.0823529, 0.678431, 0.803922, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0901961, 0.603922, 0.870588, 1 )
custom_colors/font_color_pressed = Color( 0.105882, 0.619608, 0.678431, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
text = "Pausa"

[node name="Timer" type="Timer" parent="HUD"]
wait_time = 180.0
one_shot = true
autostart = true

[node name="Node2D" type="Node2D" parent="."]

[connection signal="pressed" from="Menu/Vbox/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/Vbox/GoBack" to="." method="_on_GoBack_pressed"]
[connection signal="pressed" from="Menu/Vbox/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="HUD/Pause" to="." method="_on_Pause_pressed"]
[connection signal="timeout" from="HUD/Timer" to="." method="_on_Timer_timeout"]
